--- a/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
+++ b/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Our.Umbraco.UmbNav.Web" Version="2.0.8" />
     <PackageReference Include="ourHtagEditor" Version="2.0.1" />
     <PackageReference Include="Skybrud.Umbraco.Redirects" Version="4.0.13" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="6.0.0" />
     <PackageReference Include="UmbCheckout" Version="1.0.0-rc.12" />
     <PackageReference Include="UmbCheckout.Stripe" Version="1.0.0-rc.12" />
     <PackageReference Include="UmbCheckout.Stripe.uSync" Version="1.0.0-rc.12" />
