--- a/UmbCheckout.StarterKit.Web/appsettings.json
+++ b/UmbCheckout.StarterKit.Web/appsettings.json
@@ -40,5 +40,15 @@
         ]
       }
     }
+  },
+  "SiteSettings": {
+    "Robots": {
+      "Allow": [
+        ""
+      ],
+      "Disallow": [
+        "/"
+      ]
+    }
   }
 }
