--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/another-one.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/another-one.config
@@ -35,6 +35,9 @@
     <heroIntroduction>
       <Value><![CDATA[]]></Value>
     </heroIntroduction>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[0]]></Value>
+    </hideFromXmlSitemap>
     <image>
       <Value><![CDATA[[
   {
@@ -68,7 +71,7 @@
       <Value><![CDATA[]]></Value>
     </umbracoInternalRedirectId>
     <umbracoNaviHide>
-      <Value><![CDATA[1]]></Value>
+      <Value><![CDATA[0]]></Value>
     </umbracoNaviHide>
     <umbracoRedirect>
       <Value><![CDATA[]]></Value>
