--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/blog.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/blog.config
@@ -27,6 +27,12 @@
     <contentBlocks>
       <Value><![CDATA[]]></Value>
     </contentBlocks>
+    <feedDescription>
+      <Value><![CDATA[Blog Feed Description]]></Value>
+    </feedDescription>
+    <feedTitle>
+      <Value><![CDATA[Blog Feed Title]]></Value>
+    </feedTitle>
     <heading>
       <Value><![CDATA[Latest Blog Posts]]></Value>
     </heading>
