--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blog.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/blog.config
@@ -46,6 +46,38 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>8e413251-abb0-4116-acc0-968e91d2bdeb</Key>
+      <Name>Description</Name>
+      <Alias>feedDescription</Alias>
+      <Definition>a8d30e30-c562-49b7-8fd2-f0c393ba4399</Definition>
+      <Type>Umbraco.TextArea</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content/rssAtomFeed">RSS / Atom Feed</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>c309a3c9-8123-48ae-85cf-f89e9f5ed2b6</Key>
+      <Name>Title</Name>
+      <Alias>feedTitle</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content/rssAtomFeed">RSS / Atom Feed</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>f4718cf1-7453-41f1-b49e-48877acd2575</Key>
       <Name>Heading</Name>
       <Alias>heading</Alias>
@@ -124,6 +156,13 @@
       <Alias>content/searchResults</Alias>
       <Type>Group</Type>
       <SortOrder>0</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>d7c4468e-d218-4542-bbe8-45ca831b02ea</Key>
+      <Caption>RSS / Atom Feed</Caption>
+      <Alias>content/rssAtomFeed</Alias>
+      <Type>Group</Type>
+      <SortOrder>1</SortOrder>
     </Tab>
     <Tab>
       <Key>deb15e6d-7488-4fb5-b65c-2eae26f95bf7</Key>
