--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/meta.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/meta.config
@@ -22,6 +22,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>f7e3b534-c8ce-4a2f-ac83-221a5e12127c</Key>
+      <Name>Exclude From Site Map</Name>
+      <Alias>hideFromXmlSitemap</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>6</SortOrder>
+      <Tab Alias="meta">Meta</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>a1abdc1b-1ab6-4045-8001-e54edbc575b5</Key>
       <Name>Meta Data</Name>
       <Alias>metaData</Alias>
