--- a/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
+++ b/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="LazZiya.TagHelpers" Version="6.0.2" />
     <PackageReference Include="MetaMomentum" Version="2.2.0" />
     <PackageReference Include="NestingContently.Umbraco" Version="4.0.0" />
+    <PackageReference Include="NWebsec.AspNetCore.Middleware" Version="3.0.0" />
     <PackageReference Include="Our.Umbraco.Community.Contentment" Version="4.4.4" />
     <PackageReference Include="Our.Umbraco.ConditionalDisplayers" Version="3.4.0" />
     <PackageReference Include="Our.Umbraco.TagHelpers" Version="1.2.0" />
@@ -36,6 +37,7 @@
   <ItemGroup>
     <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
     <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="68.2.0.9" />
+    <PackageReference Include="Umbraco.Community.CSPManager" Version="1.1.0-alpha" />
     <PackageReference Include="uSync" Version="10.6.2" />
     <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="68.2.0.9" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
   </ItemGroup>
