Dotnet template working

--- a/UmbCheckout.StarterKit.Web/appsettings.json
+++ b/UmbCheckout.StarterKit.Web/appsettings.json
@@ -15,17 +15,7 @@
       "Global": {
         "Id": "299094a3-91de-4e51-8331-cc119eb967ee",
         "SanitizeTinyMce": true,
-        "Smtp": {
-          "From": "noreply@umbcheckout.net",
-          "Host": "127.0.0.1",
-          "Port": 25,
-          "SecureSocketOptions": "None",
-          "Username": null,
-          "Password": null
-        }
-      },
-      "WebRouting": {
-        "UmbracoApplicationUrl": "https://localhost:44387/"
+        "DefaultUILanguage": "en-GB"
       },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
@@ -41,6 +31,10 @@
       }
     }
   },
+  "ConnectionStrings": {
+    "umbracoDbDSN": "",
+    "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
+  },
   "SiteSettings": {
     "Robots": {
       "Allow": [
@@ -49,6 +43,12 @@
       "Disallow": [
         "/"
       ]
+    }
+  },
+  "uSync": {
+    "Settings": {
+      "ImportAtStartup": "None",
+      "ImportOnFirstBoot": true
     }
   }
 }
