--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/about-us.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/about-us.config
@@ -30,6 +30,9 @@
     <heroIntroduction>
       <Value><![CDATA[<p><span class="lead">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</span></p>]]></Value>
     </heroIntroduction>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <metaData>
       <Value><![CDATA[{
   "title": "About Us",
