--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
@@ -97,6 +97,9 @@
   "settingsData": []
 }]]></Value>
     </features>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <metaData>
       <Value><![CDATA[{
   "title": "Biker Jacket",
