--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/blocks-demo.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/blocks-demo.config
@@ -91,7 +91,7 @@
       "contentTypeKey": "9ba341c6-5dec-4c47-9e74-6ec4f2f1abc1",
       "udi": "umb://element/aa3e6de4335049e68dc39b2b580b654f",
       "internalName": "Slider",
-      "slides": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/db416451fcc148979ce986231d602c6f\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/def696ed12204505a17119776b732f7c\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83\",\r\n      \"udi\": \"umb://element/db416451fcc148979ce986231d602c6f\",\r\n      \"title\": \"Slide 1\",\r\n      \"text\": \"<p>Content 1</p>\",\r\n      \"button\": \"[{\\\"name\\\":\\\"Home\\\",\\\"udi\\\":\\\"umb://document/64837c0645a041089d97a64c1cf74240\\\"}]\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"27865a1e-36a3-4806-9756-652126c08ad2\\\",\\r\\n    \\\"mediaKey\\\": \\\"e4aeab4d-87d0-477b-94ce-d7ca9d0fed97\\\"\\r\\n  }\\r\\n]\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83\",\r\n      \"udi\": \"umb://element/def696ed12204505a17119776b732f7c\",\r\n      \"title\": \"Slide 2\",\r\n      \"text\": \"<p>Content 2</p>\",\r\n      \"button\": \"[{\\\"name\\\":\\\"About Us\\\",\\\"udi\\\":\\\"umb://document/872f8f0b6923407790043275d55ce07f\\\"}]\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"7606dd4e-208d-41eb-882f-8966ce9c1153\\\",\\r\\n    \\\"mediaKey\\\": \\\"986de8cd-d369-47f2-a8cd-18a4a38b7be0\\\"\\r\\n  }\\r\\n]\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}",
+      "slides": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/db416451fcc148979ce986231d602c6f\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/def696ed12204505a17119776b732f7c\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83\",\r\n      \"udi\": \"umb://element/db416451fcc148979ce986231d602c6f\",\r\n      \"title\": \"Slide 1\",\r\n      \"text\": \"<p>Content 1</p>\",\r\n      \"button\": \"[\\r\\n  {\\r\\n    \\\"name\\\": \\\"Home\\\",\\r\\n    \\\"udi\\\": \\\"umb://document/64837c0645a041089d97a64c1cf74240\\\"\\r\\n  }\\r\\n]\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"27865a1e-36a3-4806-9756-652126c08ad2\\\",\\r\\n    \\\"mediaKey\\\": \\\"e4aeab4d-87d0-477b-94ce-d7ca9d0fed97\\\"\\r\\n  }\\r\\n]\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83\",\r\n      \"udi\": \"umb://element/def696ed12204505a17119776b732f7c\",\r\n      \"title\": \"Slide 2\",\r\n      \"text\": \"<p>Content 2</p>\",\r\n      \"button\": \"[\\r\\n  {\\r\\n    \\\"name\\\": \\\"About Us\\\",\\r\\n    \\\"udi\\\": \\\"umb://document/872f8f0b6923407790043275d55ce07f\\\"\\r\\n  }\\r\\n]\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"7606dd4e-208d-41eb-882f-8966ce9c1153\\\",\\r\\n    \\\"mediaKey\\\": \\\"986de8cd-d369-47f2-a8cd-18a4a38b7be0\\\"\\r\\n  }\\r\\n]\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}",
       "introduction": ""
     },
     {
@@ -99,7 +99,7 @@
       "udi": "umb://element/dbefd12e689f4fe893fafe62392b5bbc",
       "internalName": "Map",
       "introduction": "",
-      "map": "{\"marker\":{\"latitude\":51.007463348399995,\"longitude\":-0.9354042924867191},\"zoom\":16,\"boundingBox\":{\"southWestCorner\":{\"latitude\":51.004803461212255,\"longitude\":-0.9411764144897462},\"northEastCorner\":{\"latitude\":51.01020408782216,\"longitude\":-0.9295892715454103}}}",
+      "map": "{\r\n  \"marker\": {\r\n    \"latitude\": 51.007463348399995,\r\n    \"longitude\": -0.9354042924867191\r\n  },\r\n  \"zoom\": 16,\r\n  \"boundingBox\": {\r\n    \"southWestCorner\": {\r\n      \"latitude\": 51.004803461212255,\r\n      \"longitude\": -0.9411764144897462\r\n    },\r\n    \"northEastCorner\": {\r\n      \"latitude\": 51.01020408782216,\r\n      \"longitude\": -0.9295892715454103\r\n    }\r\n  }\r\n}",
       "heading": "Map"
     },
     {
@@ -158,6 +158,9 @@
     <heroIntroduction>
       <Value><![CDATA[]]></Value>
     </heroIntroduction>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <metaData>
       <Value><![CDATA[{
   "title": "Blocks Demo",
