--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/blog.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/blog.config
@@ -42,6 +42,9 @@
     <heroIntroduction>
       <Value><![CDATA[]]></Value>
     </heroIntroduction>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <introduction>
       <Value><![CDATA[]]></Value>
     </introduction>
