--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/contact.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/contact.config
@@ -59,6 +59,9 @@
     <heroIntroduction>
       <Value><![CDATA[]]></Value>
     </heroIntroduction>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <metaData>
       <Value><![CDATA[{
   "title": "Contact",
