--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -77,7 +77,7 @@
       "contentTypeKey": "39ae5064-015b-46e9-9a7b-73663ae1c712",
       "udi": "umb://element/a06307bfa6aa4528bef70b633fee8906",
       "internalName": "Explore",
-      "link": "[{\"name\":\"Explore\",\"udi\":\"umb://document/64837c0645a041089d97a64c1cf74240\"}]",
+      "link": "[\r\n  {\r\n    \"name\": \"Explore\",\r\n    \"udi\": \"umb://document/64837c0645a041089d97a64c1cf74240\"\r\n  }\r\n]",
       "type": "btn-primary"
     }
   ],
@@ -102,6 +102,9 @@
     <heroText>
       <Value><![CDATA[<p><span class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget odio neque. Nunc ac ipsum maximus, hendrerit tortor eget, tincidunt ligula. Nulla nec ultricies libero.</span></p>]]></Value>
     </heroText>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <metaData>
       <Value><![CDATA[{
   "title": "UmbCheckout Demo - The easy to use eCommerce solution",
