--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/my-blog-post.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/my-blog-post.config
@@ -35,6 +35,9 @@
     <heroIntroduction>
       <Value><![CDATA[]]></Value>
     </heroIntroduction>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <image>
       <Value><![CDATA[[
   {
