--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/not-found-page.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/not-found-page.config
@@ -30,6 +30,9 @@
     <heroIntroduction>
       <Value><![CDATA[]]></Value>
     </heroIntroduction>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <metaData>
       <Value><![CDATA[{
   "title": "Not Found Page",
