--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
@@ -73,14 +73,14 @@
       "contentTypeKey": "39ae5064-015b-46e9-9a7b-73663ae1c712",
       "udi": "umb://element/cea7ff9ecdc2433099b5fdd837516751",
       "internalName": "Button 1",
-      "link": "[{\"name\":\"Home\",\"udi\":\"umb://document/64837c0645a041089d97a64c1cf74240\"}]",
+      "link": "[\r\n  {\r\n    \"name\": \"Home\",\r\n    \"udi\": \"umb://document/64837c0645a041089d97a64c1cf74240\"\r\n  }\r\n]",
       "type": "btn-primary"
     },
     {
       "contentTypeKey": "39ae5064-015b-46e9-9a7b-73663ae1c712",
       "udi": "umb://element/b4206cdc043945ee8eb6aae4003d0c45",
       "internalName": "Button 2",
-      "link": "[{\"name\":\"Home\",\"udi\":\"umb://document/64837c0645a041089d97a64c1cf74240\"}]",
+      "link": "[\r\n  {\r\n    \"name\": \"Home\",\r\n    \"udi\": \"umb://document/64837c0645a041089d97a64c1cf74240\"\r\n  }\r\n]",
       "type": "btn-secondary"
     }
   ],
@@ -93,6 +93,9 @@
     <heroIntroduction>
       <Value><![CDATA[]]></Value>
     </heroIntroduction>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <introduction>
       <Value><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>]]></Value>
     </introduction>
