--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/ping-pong-ball.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/ping-pong-ball.config
@@ -13,6 +13,12 @@
     <Template Key="e7c195f1-5312-462c-8950-9b12635f9627">Product</Template>
   </Info>
   <Properties>
+    <backgroundColour>
+      <Value><![CDATA[]]></Value>
+    </backgroundColour>
+    <backgroundImage>
+      <Value><![CDATA[]]></Value>
+    </backgroundImage>
     <categories>
       <Value><![CDATA[umb://document/b05e4c6968b14280bda533b61802a269,umb://document/6d6f0c80689d460a91f760468ae0fe4c]]></Value>
     </categories>
@@ -25,6 +31,9 @@
     <features>
       <Value><![CDATA[]]></Value>
     </features>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <metaData>
       <Value><![CDATA[{
   "title": "Ping Pong Ball",
@@ -54,14 +63,29 @@
   }
 ]]]></Value>
     </photos>
-    <price>
-      <Value><![CDATA[2]]></Value>
-    </price>
     <productName>
       <Value><![CDATA[Ping Pong Ball]]></Value>
     </productName>
     <sku>
       <Value><![CDATA[UMB-PINGPONG]]></Value>
     </sku>
+    <umbCheckoutPrice>
+      <Value><![CDATA[2]]></Value>
+    </umbCheckoutPrice>
+    <umbracoInternalRedirectId>
+      <Value><![CDATA[]]></Value>
+    </umbracoInternalRedirectId>
+    <umbracoNaviHide>
+      <Value><![CDATA[]]></Value>
+    </umbracoNaviHide>
+    <umbracoRedirect>
+      <Value><![CDATA[]]></Value>
+    </umbracoRedirect>
+    <umbracoUrlAlias>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlAlias>
+    <umbracoUrlName>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlName>
   </Properties>
 </Content>
