--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/unicorn.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/unicorn.config
@@ -13,6 +13,12 @@
     <Template Key="e7c195f1-5312-462c-8950-9b12635f9627">Product</Template>
   </Info>
   <Properties>
+    <backgroundColour>
+      <Value><![CDATA[]]></Value>
+    </backgroundColour>
+    <backgroundImage>
+      <Value><![CDATA[]]></Value>
+    </backgroundImage>
     <categories>
       <Value><![CDATA[umb://document/ca0a1bd05fd2485f880ad589644afdec]]></Value>
     </categories>
@@ -25,6 +31,9 @@
     <features>
       <Value><![CDATA[]]></Value>
     </features>
+    <hideFromXmlSitemap>
+      <Value><![CDATA[]]></Value>
+    </hideFromXmlSitemap>
     <metaData>
       <Value><![CDATA[{
   "title": "Unicorn",
@@ -66,14 +75,29 @@
   }
 ]]]></Value>
     </photos>
-    <price>
-      <Value><![CDATA[249]]></Value>
-    </price>
     <productName>
       <Value><![CDATA[Unicorn]]></Value>
     </productName>
     <sku>
       <Value><![CDATA[UMB-UNICORN]]></Value>
     </sku>
+    <umbCheckoutPrice>
+      <Value><![CDATA[249]]></Value>
+    </umbCheckoutPrice>
+    <umbracoInternalRedirectId>
+      <Value><![CDATA[]]></Value>
+    </umbracoInternalRedirectId>
+    <umbracoNaviHide>
+      <Value><![CDATA[]]></Value>
+    </umbracoNaviHide>
+    <umbracoRedirect>
+      <Value><![CDATA[]]></Value>
+    </umbracoRedirect>
+    <umbracoUrlAlias>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlAlias>
+    <umbracoUrlName>
+      <Value><![CDATA[]]></Value>
+    </umbracoUrlName>
   </Properties>
 </Content>
