Added bundles and custom.css

--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,5 @@ MigrationBackup/
 #include default location for packages
 !**/umbraco/Data/packages
 /UmbCheckout.StarterKit.Web/appsettings.Production.json
+
+.idea/
