Moved umbraco-marketplace.json

--- a/template-pack.csproj
+++ b/template-pack.csproj
@@ -19,7 +19,7 @@
     <PackageIcon>icon_nuget_umbcheckout_starterkit.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/UmbHost/UmbCheckout.StarterKit.Stripe</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/UmbHost/UmbCheckout.StarterKit.Stripe</PackageProjectUrl>
+    <PackageProjectUrl>https://umbcheckout.net</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
