--- a/.github/workflows/dotnet-build-release.yml
+++ b/.github/workflows/dotnet-build-release.yml
@@ -1,4 +1,4 @@
-name: Package up.
+name: Package up Release.
 
 on:
   workflow_dispatch:
@@ -28,6 +28,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+        ref: main
     
     - name: Retrieve cache
       uses: actions/cache@v3
@@ -69,11 +70,10 @@ jobs:
         dotnet nuget push ./build.out/UmbCheckout.StarterKit.Stripe.${{steps.gitversion.outputs.fullSemVer}}.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
 
     - name: Create Release
-      uses: "marvinpinto/action-automatic-releases@latest"
+      uses: "marvinpinto/action-automatic-releases@v0.1.15"
       with:
-        repo_token: ${{ github.token }}
-        automatic_release_tag: ${{steps.gitversion.outputs.fullSemVer}}
+        name: ${{steps.gitversion.outputs.fullSemVer}}
+        tag_name: ${{steps.gitversion.outputs.fullSemVer}}
         prerelease: false
-        title: ${{steps.gitversion.outputs.fullSemVer}}
         files: |
           ./build.out/UmbCheckout.StarterKit.Stripe.${{steps.gitversion.outputs.fullSemVer}}.nupkg
