--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/contact.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/contact.config
@@ -41,7 +41,7 @@
       "internalName": "Intro Text",
       "heading": "Intro Text",
       "introduction": "",
-      "image": "[]",
+      "image": [],
       "text": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius mauris non massa convallis, sit amet tincidunt lectus consequat. Nunc sollicitudin eleifend arcu nec pharetra. Fusce at eros id felis feugiat pulvinar. Cras tempus pharetra luctus. Sed sit amet felis auctor, pretium lectus eget, congue ex. Vestibulum vitae lorem lacinia, ornare elit vel, laoreet lacus. Nulla lorem augue, sollicitudin ut accumsan et, pharetra sed massa. Ut convallis eros in nibh sodales commodo. Integer ornare, elit non ullamcorper sodales, lectus lacus volutpat velit, aliquet sollicitudin tellus dui vel justo. Praesent ut pulvinar augue.</p>"
     }
   ],
