--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -54,7 +54,12 @@
     {
       "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
       "udi": "umb://element/4ec3d3554fed4fbca6902d0ca90752c3",
-      "backgroundColour": "{\r\n  \"value\": \"1a1d20\",\r\n  \"label\": \"Dark Subtle\",\r\n  \"sortOrder\": 15,\r\n  \"id\": \"16\"\r\n}"
+      "backgroundColour": {
+        "value": "1a1d20",
+        "label": "Dark Subtle",
+        "sortOrder": 15,
+        "id": "16"
+      }
     },
     {
       "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
@@ -77,7 +82,12 @@
       "contentTypeKey": "39ae5064-015b-46e9-9a7b-73663ae1c712",
       "udi": "umb://element/a06307bfa6aa4528bef70b633fee8906",
       "internalName": "Explore",
-      "link": "[\r\n  {\r\n    \"name\": \"Explore\",\r\n    \"udi\": \"umb://document/64837c0645a041089d97a64c1cf74240\"\r\n  }\r\n]",
+      "link": [
+        {
+          "name": "Explore",
+          "udi": "umb://document/64837c0645a041089d97a64c1cf74240"
+        }
+      ],
       "type": "btn-primary"
     }
   ],
