--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
@@ -48,7 +48,12 @@
     {
       "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
       "udi": "umb://element/4586b550676840dc8140cd58abfa30cd",
-      "backgroundColour": "{\r\n  \"value\": \"1a1d20\",\r\n  \"label\": \"Dark Subtle\",\r\n  \"sortOrder\": 15,\r\n  \"id\": \"16\"\r\n}"
+      "backgroundColour": {
+        "value": "1a1d20",
+        "label": "Dark Subtle",
+        "sortOrder": 15,
+        "id": "16"
+      }
     }
   ]
 }]]></Value>
@@ -73,14 +78,24 @@
       "contentTypeKey": "39ae5064-015b-46e9-9a7b-73663ae1c712",
       "udi": "umb://element/cea7ff9ecdc2433099b5fdd837516751",
       "internalName": "Button 1",
-      "link": "[\r\n  {\r\n    \"name\": \"Home\",\r\n    \"udi\": \"umb://document/64837c0645a041089d97a64c1cf74240\"\r\n  }\r\n]",
+      "link": [
+        {
+          "name": "Home",
+          "udi": "umb://document/64837c0645a041089d97a64c1cf74240"
+        }
+      ],
       "type": "btn-primary"
     },
     {
       "contentTypeKey": "39ae5064-015b-46e9-9a7b-73663ae1c712",
       "udi": "umb://element/b4206cdc043945ee8eb6aae4003d0c45",
       "internalName": "Button 2",
-      "link": "[\r\n  {\r\n    \"name\": \"Home\",\r\n    \"udi\": \"umb://document/64837c0645a041089d97a64c1cf74240\"\r\n  }\r\n]",
+      "link": [
+        {
+          "name": "Home",
+          "udi": "umb://document/64837c0645a041089d97a64c1cf74240"
+        }
+      ],
       "type": "btn-secondary"
     }
   ],
