--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/blocks-demo.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/blocks-demo.config
@@ -59,7 +59,16 @@
       "udi": "umb://element/03b7075ab9ce4e7fbea60ebfcb44c50b",
       "internalName": "Rich Text",
       "text": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer aliquam tincidunt nunc sed mollis. Quisque consectetur consequat enim, sit amet vestibulum eros finibus at. Curabitur ut orci tortor. Vestibulum aliquam urna sed dapibus posuere. Donec luctus risus et elit pulvinar aliquet. Phasellus ut mi feugiat, commodo leo ac, rutrum felis. Donec id consequat nulla. Maecenas molestie massa vestibulum, pharetra nisi et, volutpat nulla. Integer pharetra dictum ultrices.</p>\n<p>Proin id dui metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Mauris ac gravida mi. Aliquam euismod ex at rutrum rutrum. Phasellus dignissim enim sapien, vitae mollis nisi egestas in. Nulla convallis lorem non purus tempus, in interdum sapien molestie. Nullam in sapien mauris. Aliquam eget sem nec felis scelerisque aliquet a vel dui. Nunc eu semper nunc. Sed erat nunc, pharetra et auctor sit amet, viverra sit amet est. Vestibulum tincidunt eu diam ac faucibus. Donec accumsan dapibus pulvinar. Suspendisse eros quam, ornare nec metus non, ullamcorper interdum magna. Fusce dui velit, gravida id porttitor nec, porta ut mauris. Aliquam ultricies fringilla lorem nec vehicula.</p>",
-      "image": "[\r\n  {\r\n    \"key\": \"55fa2d1c-1872-4b16-bd3a-5e45fc6706bc\",\r\n    \"mediaKey\": \"73f06401-b006-452c-9a9d-9344ae743f38\",\r\n    \"focalPoint\": {\r\n      \"left\": 0.516,\r\n      \"top\": 0.4110225966252179\r\n    }\r\n  }\r\n]",
+      "image": [
+        {
+          "key": "55fa2d1c-1872-4b16-bd3a-5e45fc6706bc",
+          "mediaKey": "73f06401-b006-452c-9a9d-9344ae743f38",
+          "focalPoint": {
+            "left": 0.516,
+            "top": 0.4110225966252179
+          }
+        }
+      ],
       "heading": "Rich Text",
       "introduction": ""
     },
@@ -67,7 +76,33 @@
       "contentTypeKey": "b5ed32a8-c0ff-4a93-8d18-e9255aab906c",
       "udi": "umb://element/b570b23ff09a43e792a06c58aa4f3f5f",
       "internalName": "Accordion",
-      "items": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/0a26bf5b685f426ca9931c729acef382\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/c35a6cd351c0479c921b5fd9f0913655\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"128843f0-a5db-4eaa-b38f-da5bbc5d84e7\",\r\n      \"udi\": \"umb://element/0a26bf5b685f426ca9931c729acef382\",\r\n      \"title\": \"Accordion Item 1\",\r\n      \"content\": \"<p>Accordion Value 1</p>\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"128843f0-a5db-4eaa-b38f-da5bbc5d84e7\",\r\n      \"udi\": \"umb://element/c35a6cd351c0479c921b5fd9f0913655\",\r\n      \"title\": \"Accordion Item 2\",\r\n      \"content\": \"<p>Accordion Value 2</p>\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}",
+      "items": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/0a26bf5b685f426ca9931c729acef382"
+            },
+            {
+              "contentUdi": "umb://element/c35a6cd351c0479c921b5fd9f0913655"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "128843f0-a5db-4eaa-b38f-da5bbc5d84e7",
+            "udi": "umb://element/0a26bf5b685f426ca9931c729acef382",
+            "title": "Accordion Item 1",
+            "content": "<p>Accordion Value 1</p>"
+          },
+          {
+            "contentTypeKey": "128843f0-a5db-4eaa-b38f-da5bbc5d84e7",
+            "udi": "umb://element/c35a6cd351c0479c921b5fd9f0913655",
+            "title": "Accordion Item 2",
+            "content": "<p>Accordion Value 2</p>"
+          }
+        ],
+        "settingsData": []
+      },
       "heading": "Accordion",
       "introduction": ""
     },
@@ -77,7 +112,33 @@
       "internalName": "Tabs",
       "heading": "Tabs",
       "introduction": "",
-      "items": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/3d7b8510b6674f8bb9b3c7d66127f163\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/6cdf33ac5ad84ee7a87ddee8342de710\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"2640a165-b4b0-4462-8404-cdfe1fa8b004\",\r\n      \"udi\": \"umb://element/3d7b8510b6674f8bb9b3c7d66127f163\",\r\n      \"title\": \"Tab 1 Title\",\r\n      \"content\": \"<p>Tab 1 Value</p>\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"2640a165-b4b0-4462-8404-cdfe1fa8b004\",\r\n      \"udi\": \"umb://element/6cdf33ac5ad84ee7a87ddee8342de710\",\r\n      \"title\": \"Tab 2 Title\",\r\n      \"content\": \"<p>Tab 2 Value</p>\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}"
+      "items": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/3d7b8510b6674f8bb9b3c7d66127f163"
+            },
+            {
+              "contentUdi": "umb://element/6cdf33ac5ad84ee7a87ddee8342de710"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "2640a165-b4b0-4462-8404-cdfe1fa8b004",
+            "udi": "umb://element/3d7b8510b6674f8bb9b3c7d66127f163",
+            "title": "Tab 1 Title",
+            "content": "<p>Tab 1 Value</p>"
+          },
+          {
+            "contentTypeKey": "2640a165-b4b0-4462-8404-cdfe1fa8b004",
+            "udi": "umb://element/6cdf33ac5ad84ee7a87ddee8342de710",
+            "title": "Tab 2 Title",
+            "content": "<p>Tab 2 Value</p>"
+          }
+        ],
+        "settingsData": []
+      }
     },
     {
       "contentTypeKey": "fb6a4b5d-84fe-4487-8e7a-a2af15bcd953",
@@ -85,13 +146,76 @@
       "internalName": "Gallery",
       "heading": "Gallery",
       "introduction": "",
-      "images": "[\r\n  {\r\n    \"key\": \"d6b85b13-26e2-41ee-a51f-050973dbf44b\",\r\n    \"mediaKey\": \"8207e486-f201-43b8-bdcc-74d20f0dcdf5\"\r\n  },\r\n  {\r\n    \"key\": \"ad996804-1d1c-4953-a494-b5d55cdaea02\",\r\n    \"mediaKey\": \"73f06401-b006-452c-9a9d-9344ae743f38\"\r\n  },\r\n  {\r\n    \"key\": \"97148758-71fe-4405-b66a-ed20b37132a7\",\r\n    \"mediaKey\": \"986de8cd-d369-47f2-a8cd-18a4a38b7be0\"\r\n  }\r\n]"
+      "images": [
+        {
+          "key": "d6b85b13-26e2-41ee-a51f-050973dbf44b",
+          "mediaKey": "8207e486-f201-43b8-bdcc-74d20f0dcdf5"
+        },
+        {
+          "key": "ad996804-1d1c-4953-a494-b5d55cdaea02",
+          "mediaKey": "73f06401-b006-452c-9a9d-9344ae743f38"
+        },
+        {
+          "key": "97148758-71fe-4405-b66a-ed20b37132a7",
+          "mediaKey": "986de8cd-d369-47f2-a8cd-18a4a38b7be0"
+        }
+      ]
     },
     {
       "contentTypeKey": "9ba341c6-5dec-4c47-9e74-6ec4f2f1abc1",
       "udi": "umb://element/aa3e6de4335049e68dc39b2b580b654f",
       "internalName": "Slider",
-      "slides": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/db416451fcc148979ce986231d602c6f\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/def696ed12204505a17119776b732f7c\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83\",\r\n      \"udi\": \"umb://element/db416451fcc148979ce986231d602c6f\",\r\n      \"title\": \"Slide 1\",\r\n      \"text\": \"<p>Content 1</p>\",\r\n      \"button\": \"[\\r\\n  {\\r\\n    \\\"name\\\": \\\"Home\\\",\\r\\n    \\\"udi\\\": \\\"umb://document/64837c0645a041089d97a64c1cf74240\\\"\\r\\n  }\\r\\n]\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"27865a1e-36a3-4806-9756-652126c08ad2\\\",\\r\\n    \\\"mediaKey\\\": \\\"e4aeab4d-87d0-477b-94ce-d7ca9d0fed97\\\"\\r\\n  }\\r\\n]\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83\",\r\n      \"udi\": \"umb://element/def696ed12204505a17119776b732f7c\",\r\n      \"title\": \"Slide 2\",\r\n      \"text\": \"<p>Content 2</p>\",\r\n      \"button\": \"[\\r\\n  {\\r\\n    \\\"name\\\": \\\"About Us\\\",\\r\\n    \\\"udi\\\": \\\"umb://document/872f8f0b6923407790043275d55ce07f\\\"\\r\\n  }\\r\\n]\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"7606dd4e-208d-41eb-882f-8966ce9c1153\\\",\\r\\n    \\\"mediaKey\\\": \\\"986de8cd-d369-47f2-a8cd-18a4a38b7be0\\\"\\r\\n  }\\r\\n]\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}",
+      "slides": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/db416451fcc148979ce986231d602c6f"
+            },
+            {
+              "contentUdi": "umb://element/def696ed12204505a17119776b732f7c"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83",
+            "udi": "umb://element/db416451fcc148979ce986231d602c6f",
+            "title": "Slide 1",
+            "text": "<p>Content 1</p>",
+            "button": [
+              {
+                "name": "Home",
+                "udi": "umb://document/64837c0645a041089d97a64c1cf74240"
+              }
+            ],
+            "image": [
+              {
+                "key": "27865a1e-36a3-4806-9756-652126c08ad2",
+                "mediaKey": "e4aeab4d-87d0-477b-94ce-d7ca9d0fed97"
+              }
+            ]
+          },
+          {
+            "contentTypeKey": "4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83",
+            "udi": "umb://element/def696ed12204505a17119776b732f7c",
+            "title": "Slide 2",
+            "text": "<p>Content 2</p>",
+            "button": [
+              {
+                "name": "About Us",
+                "udi": "umb://document/872f8f0b6923407790043275d55ce07f"
+              }
+            ],
+            "image": [
+              {
+                "key": "7606dd4e-208d-41eb-882f-8966ce9c1153",
+                "mediaKey": "986de8cd-d369-47f2-a8cd-18a4a38b7be0"
+              }
+            ]
+          }
+        ],
+        "settingsData": []
+      },
       "introduction": ""
     },
     {
@@ -99,7 +223,23 @@
       "udi": "umb://element/dbefd12e689f4fe893fafe62392b5bbc",
       "internalName": "Map",
       "introduction": "",
-      "map": "{\r\n  \"marker\": {\r\n    \"latitude\": 51.007463348399995,\r\n    \"longitude\": -0.9354042924867191\r\n  },\r\n  \"zoom\": 16,\r\n  \"boundingBox\": {\r\n    \"southWestCorner\": {\r\n      \"latitude\": 51.004803461212255,\r\n      \"longitude\": -0.9411764144897462\r\n    },\r\n    \"northEastCorner\": {\r\n      \"latitude\": 51.01020408782216,\r\n      \"longitude\": -0.9295892715454103\r\n    }\r\n  }\r\n}",
+      "map": {
+        "marker": {
+          "latitude": 51.007463348399995,
+          "longitude": -0.9354042924867191
+        },
+        "zoom": 16,
+        "boundingBox": {
+          "southWestCorner": {
+            "latitude": 51.004803461212255,
+            "longitude": -0.9411764144897462
+          },
+          "northEastCorner": {
+            "latitude": 51.01020408782216,
+            "longitude": -0.9295892715454103
+          }
+        }
+      },
       "heading": "Map"
     },
     {
@@ -110,10 +250,54 @@
       "introduction": "",
       "toEmailAddress": "test@test.com",
       "fromEmailAddress": "",
-      "formFields": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/b93e51e9ed884316a2d14d3a2496fdfc\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"f332421d-60a2-4291-9699-16c1f5b025b5\",\r\n      \"udi\": \"umb://element/b93e51e9ed884316a2d14d3a2496fdfc\",\r\n      \"internalName\": \"Name\",\r\n      \"type\": \"text\",\r\n      \"label\": \"Name\",\r\n      \"placeholder\": \"Name\",\r\n      \"required\": \"1\",\r\n      \"autocomplete\": \"0\",\r\n      \"validation\": \"0\",\r\n      \"validationType\": \"\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}",
+      "formFields": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/b93e51e9ed884316a2d14d3a2496fdfc"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "f332421d-60a2-4291-9699-16c1f5b025b5",
+            "udi": "umb://element/b93e51e9ed884316a2d14d3a2496fdfc",
+            "internalName": "Name",
+            "type": "text",
+            "label": "Name",
+            "placeholder": "Name",
+            "required": "1",
+            "autocomplete": "0",
+            "validation": "0",
+            "validationType": ""
+          }
+        ],
+        "settingsData": []
+      },
       "confirmationPage": "umb://document/c079cbfa78e74d3ab75b27613ea6c4e0",
       "subject": "Test Form",
-      "message": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/c34d29f47e0f403cacbfcf9a37bddd52\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"2a5e17b1-fc35-4f54-a1db-8e0ab442fc71\",\r\n      \"udi\": \"umb://element/c34d29f47e0f403cacbfcf9a37bddd52\",\r\n      \"internalName\": \"Message\",\r\n      \"label\": \"Message\",\r\n      \"rows\": \"6\",\r\n      \"autocomplete\": \"0\",\r\n      \"validation\": \"0\",\r\n      \"validationType\": \"\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}",
+      "message": {
+        "layout": {
+          "Umbraco.BlockList": [
+            {
+              "contentUdi": "umb://element/c34d29f47e0f403cacbfcf9a37bddd52"
+            }
+          ]
+        },
+        "contentData": [
+          {
+            "contentTypeKey": "2a5e17b1-fc35-4f54-a1db-8e0ab442fc71",
+            "udi": "umb://element/c34d29f47e0f403cacbfcf9a37bddd52",
+            "internalName": "Message",
+            "label": "Message",
+            "rows": "6",
+            "autocomplete": "0",
+            "validation": "0",
+            "validationType": ""
+          }
+        ],
+        "settingsData": []
+      },
       "messageIntroduction": "A form has been submitted, the details can be found below:"
     }
   ],
@@ -139,7 +323,12 @@
     {
       "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
       "udi": "umb://element/15441d5f6a7a45c88a4f8740e2088a7a",
-      "backgroundColour": "{\r\n  \"value\": \"031633\",\r\n  \"label\": \"Primary Subtle\",\r\n  \"sortOrder\": 1,\r\n  \"id\": \"2\"\r\n}"
+      "backgroundColour": {
+        "value": "031633",
+        "label": "Primary Subtle",
+        "sortOrder": 1,
+        "id": "2"
+      }
     },
     {
       "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
