--- a/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
+++ b/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="MetaMomentum" Version="2.2.0" />
     <PackageReference Include="NestingContently.Umbraco" Version="4.0.0" />
     <PackageReference Include="NWebsec.AspNetCore.Middleware" Version="3.0.0" />
-    <PackageReference Include="Our.Umbraco.Community.Contentment" Version="4.5.0" />
+    <PackageReference Include="Our.Umbraco.Community.Contentment" Version="4.5.1" />
     <PackageReference Include="Our.Umbraco.ConditionalDisplayers" Version="3.4.0" />
     <PackageReference Include="Our.Umbraco.TagHelpers" Version="1.2.0" />
     <PackageReference Include="Our.Umbraco.TheDashboard" Version="10.0.1" />
@@ -38,7 +38,7 @@
   <ItemGroup>
     <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
     <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="68.2.0.9" />
-    <PackageReference Include="Umbraco.Community.CSPManager" Version="1.1.0-alpha" />
+    <PackageReference Include="Umbraco.Community.CSPManager" Version="1.2.0" />
     <PackageReference Include="uSync" Version="10.7.1" />
     <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="68.2.0.9" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
   </ItemGroup>
