--- a/.github/workflows/dotnet-build-release.yml
+++ b/.github/workflows/dotnet-build-release.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Display GitVersion SemVer
       run: |
-       echo "FullSemVer: ${{ steps.gitversion.outputs.fullSemVer }}"
+       echo "FullSemVer: ${{ steps.gitversion.outputs.majorMinorPatch }}"
               
 # ------------------------
 # actual builds / packages 
@@ -57,17 +57,17 @@ jobs:
       run: dotnet restore ./template-pack.csproj
 
     - name: Build UmbCheckout.StarterKit.Stripe
-      run: dotnet pack ./template-pack.csproj --no-restore -c ${{env.CONFIG}} --output ${{env.OUT_FOLDER}} /p:version=${{steps.gitversion.outputs.fullSemVer}}
+      run: dotnet pack ./template-pack.csproj --no-restore -c ${{env.CONFIG}} --output ${{env.OUT_FOLDER}} /p:version=${{steps.gitversion.outputs.majorMinorPatch}}
       
     - name: Push to UmbHost GitHub Nuget Repo
       if: ${{ github.event_name != 'pull_request' }}
       run: | 
-        dotnet nuget push ./build.out/UmbCheckout.StarterKit.Stripe.${{steps.gitversion.outputs.fullSemVer}}.nupkg --skip-duplicate --source https://nuget.pkg.github.com/umbhost/index.json --api-key ${{ github.token }}
+        dotnet nuget push ./build.out/UmbCheckout.StarterKit.Stripe.${{steps.gitversion.outputs.majorMinorPatch}}.nupkg --skip-duplicate --source https://nuget.pkg.github.com/umbhost/index.json --api-key ${{ github.token }}
     
     - name: Push to UmbHost Nuget Repo
       if: ${{ github.event_name != 'pull_request' }}
       run: | 
-        dotnet nuget push ./build.out/UmbCheckout.StarterKit.Stripe.${{steps.gitversion.outputs.fullSemVer}}.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
+        dotnet nuget push ./build.out/UmbCheckout.StarterKit.Stripe.${{steps.gitversion.outputs.majorMinorPatch}}.nupkg --skip-duplicate --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
 
     - name: Create Release
       uses: "softprops/action-gh-release@v0.1.15"
