--- a/.github/workflows/dotnet-build-release.yml
+++ b/.github/workflows/dotnet-build-release.yml
@@ -72,8 +72,8 @@ jobs:
     - name: Create Release
       uses: "softprops/action-gh-release@v0.1.15"
       with:
-        name: ${{steps.gitversion.outputs.fullSemVer}}
-        tag_name: ${{steps.gitversion.outputs.fullSemVer}}
+        name: ${{steps.gitversion.outputs.majorMinorPatch}}
+        tag_name: ${{steps.gitversion.outputs.majorMinorPatch}}
         prerelease: false
         files: |
-          ./build.out/UmbCheckout.StarterKit.Stripe.${{steps.gitversion.outputs.fullSemVer}}.nupkg
+          ./build.out/UmbCheckout.StarterKit.Stripe.${{steps.gitversion.outputs.majorMinorPatch}}.nupkg
