--- a/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
+++ b/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
@@ -16,30 +16,31 @@
 
   <ItemGroup>
     <PackageReference Include="Bergmania.OpenStreetMap" Version="5.3.1" />
+    <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="LazZiya.TagHelpers" Version="6.0.2" />
-    <PackageReference Include="MetaMomentum" Version="2.2.0" />
+    <PackageReference Include="MetaMomentum" Version="2.2.1" />
+    <PackageReference Include="Mono.TextTemplating" Version="2.3.1" />
     <PackageReference Include="NestingContently.Umbraco" Version="12.0.0" />
     <PackageReference Include="NWebsec.AspNetCore.Middleware" Version="3.0.0" />
-    <PackageReference Include="Our.Umbraco.Community.Contentment" Version="4.5.1" />
+    <PackageReference Include="Our.Umbraco.Community.Contentment" Version="4.6.1" />
     <PackageReference Include="Our.Umbraco.ConditionalDisplayers" Version="3.4.0" />
     <PackageReference Include="Our.Umbraco.TagHelpers" Version="1.2.0" />
-    <PackageReference Include="Our.Umbraco.TheDashboard" Version="11.1.0" />
-    <PackageReference Include="Our.Umbraco.UmbNav.Web" Version="2.0.8" />
+    <PackageReference Include="Our.Umbraco.TheDashboard" Version="13.0.0" />
+    <PackageReference Include="Our.Umbraco.UmbNav.Web" Version="3.0.0" />
     <PackageReference Include="ourHtagEditor" Version="3.1.0" />
-    <PackageReference Include="Skybrud.Umbraco.Redirects" Version="13.0.0-alpha001" />
+    <PackageReference Include="Skybrud.Umbraco.Redirects" Version="13.0.4" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
-    <PackageReference Include="UmbCheckout" Version="1.3.0-rc0002" />
-    <PackageReference Include="UmbCheckout.Stripe" Version="1.3.0-rc0002" />
-    <PackageReference Include="UmbCheckout.Stripe.uSync" Version="1.3.0-rc0002" />
-    <PackageReference Include="UmbCheckout.uSync" Version="1.3.0-rc0002" />
-    <PackageReference Include="Umbraco.Cms" Version="13.0.0-rc3" />
+    <PackageReference Include="UmbCheckout" Version="1.4.0" />
+    <PackageReference Include="UmbCheckout.Stripe" Version="1.4.0" />
+    <PackageReference Include="UmbCheckout.Stripe.uSync" Version="1.4.0" />
+    <PackageReference Include="UmbCheckout.uSync" Version="1.4.0" />
+    <PackageReference Include="Umbraco.Cms" Version="13.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
-    <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.1" />
-    <PackageReference Include="Umbraco.Community.CSPManager" Version="1.2.0" />
-    <PackageReference Include="uSync" Version="13.0.0-rc2" />
+    <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.3" />
+    <PackageReference Include="uSync" Version="13.1.3" />
     <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="72.1.0.1" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
   </ItemGroup>
 
