--- a/UmbCheckout.StarterKit.Web/appsettings.json
+++ b/UmbCheckout.StarterKit.Web/appsettings.json
@@ -31,10 +31,6 @@
       }
     }
   },
-  "ConnectionStrings": {
-    "umbracoDbDSN": "",
-    "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
-  },
   "SiteSettings": {
     "Robots": {
       "Allow": [
@@ -50,5 +46,9 @@
       "ImportAtStartup": "None",
       "ImportOnFirstBoot": true
     }
+  },
+  "ConnectionStrings": {
+    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
+    "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
   }
 }
