--- a/template-pack.csproj
+++ b/template-pack.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Umbraco.Cms" Version="13.0.0-rc3" />
+		<PackageReference Include="Umbraco.Cms" Version="13.2.0" />
 	</ItemGroup>
 
 </Project>
